codex-rs/tui/src/bottom_pane/mentions_v2/snapshots/codex_tui__bottom_pane__mentions_v2__render__tests__empty_filter.snap
---
source: tui/src/bottom_pane/mentions_v2/render_tests.rs
expression: text(&buffer)
---
  Mentions
  Files, directories, plugins, skills and tasks

   All Results   Filesystem   Filesystem (All)   Plugins

  new-query

  loading...








  enter/tab insert · esc close · ↑/↓ select · ←/→ filter
